--- a/cv.tex
+++ b/cv.tex
@@ -20,6 +20,8 @@
 
 % adjust the page margins
 \usepackage[scale=0.75]{geometry}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvheadnamewidth}{10cm}            % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
@@ -39,7 +41,7 @@
 \social[gitlab]{jdoe}                              % optional, remove / comment the line if not wanted
 \social[skype]{jdoe}                               % optional, remove / comment the line if not wanted
 \extrainfo{additional information}                 % optional, remove / comment the line if not wanted
-\photo[64pt][0.4pt]{pictures/romain-warnan.jpg}    % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+\photo[90pt][0pt]{pictures/romain-warnan.jpg}    % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 \quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
 % bibliography adjustements (only useful if you make citations in your resume, or print a list of publications using BibTeX)
