--- a/cv.tex
+++ b/cv.tex
@@ -75,8 +75,12 @@ Detailed achievements:%
 \section{Langues étrangères}\label{sec:langues-etrangeres}
 \cvitemwithcomment{Anglais}{Bon niveau}{Très bien lu, bien compris, assez bien parlé}
 
-\section{Formation professionelle}
-\cventry{2018}{Job title}{Employer}{City}{}{}
+\section{Formation professionnelle}\label{sec:formation-professionelle}
+\cvitem{Java}{Java avancé, Hibernate, Spring MVC, Struts2}
+\cvitem{Javascript}{EcmaScript 6, React, Redux}
+\cvitem{Web}{Responsive Web Design, Référencement, Accessibilité}
+\cvitem{Données}{SolR, Big Data}
+\cvitem{Productivité}{Git, Get Things Done, Manager de proximité}
 
 \section{Computer skills}
 \cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
