--- a/cv.tex
+++ b/cv.tex
@@ -29,26 +29,26 @@
 \photo[90pt][0pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 \quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
-%----------------------------------------------------------------------------------
-%            content
-%----------------------------------------------------------------------------------
 \begin{document}
-%-----       resume       ---------------------------------------------------------
+
 \makecvtitle
 
 \section{Formation}\label{sec:formation}
+
 \cventry{2006--2007}
 {Qualification d'analyste développeur}
 {Institut de gestion publique et du développement économique}
 {Vincennes}
 {}
 {Conception de système d'information, et notions d'architecture informatique, de réseaux et de système d'exploitation}
+
 \cventry{2004--2006}
 {Concours d'attaché statisticien de l'Insee}
 {École nationale de la statistique et de l'analyse de l'information}
 {Rennes}
 {}
 {Mathématiques, statistiques, économie, informatique: algorithmie et langage Java}
+
 \cventry{2002--2004}
 {Classe préparatoire aux grandes écoles}
 {Lycée Janson de Sailly}
@@ -60,7 +60,7 @@
 \cventry{depuis 2017}
 {Responsable de domaine}
 {Insee}
-{Montrouge}
+{Service national du dévelopement informatique de Paris}
 {}
 {Encadrement du groupe \og outils transverses \fg composé de 11 développeurs et assurant la maintenance d'applications transversales : gestions des annuaires, service de publipostage\ldots
 \begin{itemize}%
@@ -73,7 +73,7 @@
 \cventry{2014--2017}
 {\textit{Lead-developer} : refonte du site \textit{insee.fr}}
 {Insee}
-{Malakoff}
+{Centre national informatique de Paris}
 {}
 {Analyse et développements selon les méthodes Agiles dans le cadre d'un projet stratégique pour l'Insee : la refonte complète de son site de diffusion et de son \textit{back-office} :
 \begin{itemize}%
@@ -93,7 +93,7 @@ Technologies utilisées :
 \cventry{2012--2014}
 {\textit{Lead-developer} : refonte du site \textit{sirene.fr}}
 {Insee}
-{Malakoff}
+{Centre national informatique de Paris}
 {}
 {Développements et encadrement des développeurs dans le cadre de la refonte du site de diffusion des données d'entreprises.
 \newline Technologies utilisées :
@@ -102,7 +102,21 @@ Technologies utilisées :
   \item \textit{front-end} : JSP / jQuery / Bootstrap ;
   \item données : Postgres
   \item paiement en ligne : Paybox
-\end{itemize}}%
+\end{itemize}}
+
+\cventry{2009--2012}
+{Expert nomenclatures de professions}
+{Insee}
+{Direction des statistiques démographique et sociale}
+{}
+{}
+
+\cventry{2007--2009}
+{Responsable informatique des applications Java du recensement de la population}
+{Insee}
+{Centre national informatique de Paris}
+{}
+{Maintenance d'applications Java : \textit{batchs}, applications \textit{web} et clients lourds.}
 
 \section{Langues étrangères}\label{sec:langues-etrangeres}
 \cvitemwithcomment{Anglais}{Bon niveau}{Très bien lu, bien compris, assez bien parlé}
