--- a/cv.tex
+++ b/cv.tex
@@ -1,8 +1,10 @@
-\documentclass[12pt,a4paper,roman]{moderncv}       % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[11pt,a4paper,roman]{moderncv}       % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
-\moderncvstyle{classic}                            % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
+\moderncvstyle{classic}                             % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
 \moderncvcolor{burgundy}                           % color options 'black', 'blue' (default), 'burgundy', 'green', 'grey', 'orange', 'purple' and 'red'
+\moderncvicons{awesome}
+
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 %\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -21,13 +23,18 @@
 
 % personal data
 \name{Romain}{Warnan}
-\title{Développeur senior \textit{full-stack}}
+\title{Développeur senior \emph{full-stack}}
 \address{11 bis rue des Missionnaires}{78000 Versailles}
 \phone[mobile]{06~80~33~58~52}
 \email{romain.warnan@gmail.com}
 \social[github]{github.com/romain-warnan}
 \photo[90pt][0pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
-\quote{Some quote}                                 % optional, remove / comment the line if not wanted
+
+\quote{
+  J'ai découvert l'informatique en école d'ingénieur en statistiques.
+  La passion pour le développement ne m'a pas quitté depuis : cela fait 10 ans que je travaille dans ce domaine à l'Insee.
+  J'ai été maintenicien, puis \emph{lead-developer} et je suis aujourd'hui responsable d'un groupe de développeurs.
+}
 
 \begin{document}
 
@@ -71,35 +78,35 @@
 \end{itemize}}
 
 \cventry{2014--2017}
-{\textit{Lead-developer} : refonte du site \textit{insee.fr}}
+{\emph{Lead-developer} : refonte du site \emph{insee.fr}}
 {Insee}
-{Centre national informatique de Paris}
 {}
-{Analyse et développements selon les méthodes Agiles dans le cadre d'un projet stratégique pour l'Insee : la refonte complète de son site de diffusion et de son \textit{back-office} :
+{}
+{Analyse et développements selon les méthodes Agiles dans le cadre d'un projet stratégique pour l'Insee : la refonte complète de son site de diffusion et de son \emph{back-office} :
 \begin{itemize}%
   \item estimation des charges ;
   \item analyse, conception et développements des fonctionnalités les plus complexes ;
-  \item prise en compte des contraintes : accessibilité, \textit{responsive design}, référencement,  sécurité et performances ;
+  \item prise en compte des contraintes : accessibilité, \emph{responsive design}, référencement,  sécurité et performances ;
   \item contrôle de la qualité des développements ;
   \item mise en production.
 \end{itemize}%
 Technologies utilisées :
 \begin{itemize}%
-  \item \textit{back-end} : Java avec Spring MVC, serveur Tomcat ;
-  \item \textit{front-end} : JSP / jQuery, et React / Redux, Sass / Compass ;
+  \item \emph{back-end} : Java avec Spring MVC, serveur Tomcat ;
+  \item \emph{front-end} : JSP / jQuery, et React / Redux, Sass / Compass ;
   \item données : Postgres et SolR
 \end{itemize}}
 
 \cventry{2012--2014}
-{\textit{Lead-developer} : refonte du site \textit{sirene.fr}}
+{\emph{Lead-developer} : refonte du site \emph{sirene.fr}}
 {Insee}
-{Centre national informatique de Paris}
+{}
 {}
 {Développements et encadrement des développeurs dans le cadre de la refonte du site de diffusion des données d'entreprises.
 \newline Technologies utilisées :
 \begin{itemize}%
-  \item \textit{back-end} : Java avec Struts2, serveur Tomcat ;
-  \item \textit{front-end} : JSP / jQuery / Bootstrap ;
+  \item \emph{back-end} : Java avec Struts2, serveur Tomcat ;
+  \item \emph{front-end} : JSP / jQuery / Bootstrap ;
   \item données : Postgres
   \item paiement en ligne : Paybox
 \end{itemize}}
@@ -107,16 +114,16 @@ Technologies utilisées :
 \cventry{2009--2012}
 {Expert nomenclatures de professions}
 {Insee}
-{Direction des statistiques démographique et sociale}
 {}
 {}
+{Travaux statistiques et informatiques sur le codage automatique des prfessions et catégories sociales}
 
 \cventry{2007--2009}
 {Responsable informatique des applications Java du recensement de la population}
 {Insee}
-{Centre national informatique de Paris}
 {}
-{Maintenance d'applications Java : \textit{batchs}, applications \textit{web} et clients lourds.}
+{}
+{Maintenance d'applications Java : \emph{batchs}, applications \emph{web} et clients lourds.}
 
 \section{Langues étrangères}\label{sec:langues-etrangeres}
 \cvitemwithcomment{Anglais}{Bon niveau}{Très bien lu, bien compris, assez bien parlé}
@@ -129,8 +136,7 @@ Technologies utilisées :
 \cvitem{Productivité}{Git, Get Things Done, Manager de proximité}
 
 \section{Compétences informatiques}\label{sec:competences-informatiques}
-\cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
-\cvdoubleitem{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
-\cvdoubleitem{category 3}{XXX, YYY, ZZZ}{category 6}{XXX, YYY, ZZZ}
+\cvdoubleitem{Java}{\faStar\faStar\faStar\faStar\faStarHalfO}{HTML / CSS}{\faStar\faStar\faStar\faStarHalfO\faStarO}
+\cvdoubleitem{React / Redux}{\faStar\faStar\faStar\faStarO\faStarO}{Git}{\faStar\faStar\faStar\faStar\faStarO}
 
 \end{document}
