--- a/cv.tex
+++ b/cv.tex
@@ -136,7 +136,8 @@ Technologies utilisées :
 \cvitem{Productivité}{Git, Get Things Done, Manager de proximité}
 
 \section{Compétences informatiques}\label{sec:competences-informatiques}
-\cvdoubleitem{Java}{\faStar\faStar\faStar\faStar\faStarHalfO}{HTML / CSS}{\faStar\faStar\faStar\faStarHalfO\faStarO}
-\cvdoubleitem{React / Redux}{\faStar\faStar\faStar\faStarO\faStarO}{Git}{\faStar\faStar\faStar\faStar\faStarO}
+\cvdoubleitem{Java}{\faStar\faStar\faStar\faStar\faStarHalfO}{HTML~/~CSS}{\faStar\faStar\faStar\faStarHalfO\faStarO}
+\cvdoubleitem{Javascript}{\faStar\faStar\faStar\faStar\faStarO}{React~/~Redux}{\faStar\faStar\faStar\faStarO\faStarO}
+\cvdoubleitem{Shell}{\faStar\faStar\faStar\faStarO\faStarO}{Git}{\faStar\faStar\faStar\faStar\faStarO}
 
 \end{document}
