Suppression de césure automatiques

--- a/cv.tex
+++ b/cv.tex
@@ -2,7 +2,7 @@
 
 % moderncv themes
 \moderncvstyle{classic}                             % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
-\moderncvcolor{burgundy}                           % color options 'black', 'blue' (default), 'burgundy', 'green', 'grey', 'orange', 'purple' and 'red'
+\moderncvcolor{burgundy}                            % color options 'black', 'blue' (default), 'burgundy', 'green', 'grey', 'orange', 'purple' and 'red'
 \moderncvicons{awesome}
 
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
@@ -136,8 +136,8 @@ Technologies utilisées :
 \cvitem{Productivité}{Git, Get Things Done, Manager de proximité}
 
 \section{Compétences informatiques}\label{sec:competences-informatiques}
-\cvdoubleitem{Java}{\faStar\faStar\faStar\faStar\faStarHalfO}{HTML~/~CSS}{\faStar\faStar\faStar\faStarHalfO\faStarO}
-\cvdoubleitem{Javascript}{\faStar\faStar\faStar\faStar\faStarO}{React~/~Redux}{\faStar\faStar\faStar\faStarO\faStarO}
+\cvdoubleitem{Java}{\faStar\faStar\faStar\faStar\faStarHalfO}{\mbox{HTML/CSS}}{\faStar\faStar\faStar\faStarHalfO\faStarO}
+\cvdoubleitem{Javascript}{\faStar\faStar\faStar\faStar\faStarO}{\mbox{React/Redux}}{\faStar\faStar\faStar\faStarO\faStarO}
 \cvdoubleitem{Shell}{\faStar\faStar\faStar\faStarO\faStarO}{Git}{\faStar\faStar\faStar\faStar\faStarO}
 
 \end{document}
