Suppression \quote, marié 2 enfants

--- a/cv.tex
+++ b/cv.tex
@@ -26,17 +26,18 @@
 % personal data
 \name{Romain}{Warnan}
 \title{Développeur senior \emph{full-stack}}
+\extrainfo{34 ans, marié, deux enfants}
 \address{11 bis rue des Missionnaires}{78000 Versailles}
 \phone[mobile]{06~80~33~58~52}
 \email{romain.warnan@gmail.com}
 \social[github]{github.com/romain-warnan}
 \photo[90pt][0.2pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 
-\quote{
-  J'ai découvert l'informatique en école d'ingénieur en statistiques.
-  La passion pour le développement ne m'a pas quitté depuis : cela fait 10 ans que je travaille dans ce domaine à l'Insee.
-  J'ai été maintenicien, puis \emph{lead-developer} et je suis aujourd'hui responsable d'un groupe de développeurs.
-}
+% \quote{
+%   J'ai découvert l'informatique en école d'ingénieur en statistiques.
+%   La passion pour le développement ne m'a pas quitté depuis : cela fait 10 ans que je travaille dans ce domaine à l'Insee.
+%   J'ai été maintenicien, puis \emph{lead-developer} et je suis aujourd'hui responsable d'un groupe de développeurs.
+% }
 
 \newcommand{\stars}[1]{
     \multido{}{\intcalcDiv{#1}{2}}{\faStar}
