--- a/cv.tex
+++ b/cv.tex
@@ -25,13 +25,15 @@
 
 % personal data
 \name{Romain}{Warnan}
-\title{Développeur senior \emph{full-stack}}
-\extrainfo{34 ans, marié, deux enfants}
+\title{Développeur Java full-stack senior}
 \address{11 bis rue des Missionnaires}{78000 Versailles}
 \phone[mobile]{06~80~33~58~52}
 \email{romain.warnan@gmail.com}
 \social[github]{github.com/romain-warnan}
+% \extrainfo{\textbf{34 ans, marié, deux enfants}}
 \photo[90pt][0.2pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+
+\quote{34 ans, marié, deux enfants}
 
 % \quote{
 %   J'ai découvert l'informatique en école d'ingénieur en statistiques.
