--- a/cv.tex
+++ b/cv.tex
@@ -53,19 +53,21 @@
 
 \makecvtitle
 
+
+
 \section{Expérience professionnelle}\label{sec:expérience-professionnelle}
 
 \cventry{depuis 2017}
-{Responsable de domaine}
+{Responsable de domaine informatique}
 {Insee}
 {}
 {}
-{Encadrement du groupe \og outils transverses \fg composé de 11 développeurs et assurant la maintenance d'applications transversales : gestions des annuaires, service de publipostage\ldots
+{Encadrement du groupe \og outils transverses \fg composé de 11 développeurs et assurant la maintenance d'applications transversales : gestions des annuaires et de l'authentification, service de publipostage, transferts de fichiers, etc. :
 \begin{itemize}%
-  \item Encadrement de proximité ;
-  \item Support et expertise aux autres développeurs ;
-  \item Conception et animation de formation : Git et Spring MVC ;
-  \item Animation du développement.
+  \item encadrement de proximité ;
+  \item support et expertise aux autres développeurs ;
+  \item conception et animation de formation : Git et Spring MVC ;
+  \item animation du développement.
 \end{itemize}}
 
 \cventry{2014--2017}
@@ -73,7 +75,7 @@
 {Insee}
 {}
 {}
-{Analyse et développements selon les méthodes Agiles dans le cadre d'un projet stratégique pour l'Insee : la refonte complète de son site de diffusion et de son \emph{back-office} :
+{Analyse et développements selon les méthodes agiles dans le cadre d'un projet stratégique pour l'Insee : la refonte complète du site de diffusion :
 \begin{itemize}%
   \item estimation des charges ;
   \item analyse, conception et développements des fonctionnalités les plus complexes ;
@@ -84,7 +86,7 @@
 Technologies utilisées :
 \begin{itemize}%
   \item \emph{back-end} : Java avec Spring MVC, serveur Tomcat ;
-  \item \emph{front-end} : JSP / jQuery, et React / Redux, Sass / Compass ;
+  \item \emph{front-end} : JSP / jQuery, React / Redux, Sass / Compass ;
   \item données : Postgres et SolR
 \end{itemize}}
 
@@ -129,7 +131,7 @@ Technologies utilisées :
 {Institut de gestion publique et du développement économique}
 {Vincennes}
 {}
-{Conception de système d'information, et notions d'architecture informatique, de réseaux et de système d'exploitation}
+{Conception de système d'information, notions d'architecture informatique, de réseaux et de systèmes d'exploitations}
 
 
 \cventry{2004--2006}
