Formation Web-services

--- a/cv.tex
+++ b/cv.tex
@@ -152,14 +152,18 @@ Technologies utilisées :
 {}
 {Filière mathématiques, physique et sciences de l'ingénieur}
 
+
+
 \section{Formation professionnelle}\label{sec:formation-professionelle}
 
 \cvitem{Java}{Java avancé, Hibernate, Spring MVC, Struts2}
 \cvitem{Javascript}{EcmaScript 6, React, Redux}
-\cvitem{Web}{Responsive Web Design, Référencement, Accessibilité}
+\cvitem{Web}{Web-services, Responsive Web Design, Référencement, Accessibilité}
 \cvitem{Données}{SolR, Big Data}
-
 \cvitem{Productivité}{Git, Get Things Done, Manager de proximité}
+
+
+
 \section{Langues étrangères}\label{sec:langues-etrangeres}
 
 \cvitemwithcomment{Anglais}{Bon niveau}{Très bien lu, bien compris, assez bien parlé}
