--- a/cv.tex
+++ b/cv.tex
@@ -109,7 +109,7 @@ Technologies utilisées :
 {Insee}
 {}
 {}
-{Travaux statistiques et informatiques sur le codage automatique des prfessions et catégories sociales}
+{Travaux statistiques et informatiques sur le codage automatique des professions et catégories sociales}
 
 \cventry{2007--2009}
 {Responsable informatique des applications Java du recensement de la population}
