Anonymisation du CV

--- a/cv.tex
+++ b/cv.tex
@@ -24,14 +24,14 @@
 %\NoAutoSpaceBeforeFDP
 
 % personal data
-\name{Romain}{Warnan}
+\name{Prénom}{Nom}
 \title{Développeur Java full-stack senior}
-\address{11 bis rue des Missionnaires}{78000 Versailles}
-\phone[mobile]{06~80~33~58~52}
-\email{romain.warnan@gmail.com}
-\social[github]{github.com/romain-warnan}
+\address{Rue}{Ville}
+\phone[mobile]{Téléphone}
+\email{Adresse mail}
+\social[github]{github.com}
 % \extrainfo{\textbf{34 ans, marié, deux enfants}}
-\photo[90pt][0.2pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+% \photo[90pt][0.2pt]{pictures/romain-warnan.jpg}      % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 
 \quote{34 ans, marié, deux enfants}
 
