--- a/cv.tex
+++ b/cv.tex
@@ -85,7 +85,7 @@
 \end{itemize}%
 Technologies utilisées :
 \begin{itemize}%
-  \item \emph{back-end} : Java avec Spring MVC, serveur Tomcat ;
+  \item \emph{back-end} : Java avec Spring MVC et Hibernate, serveur Tomcat ;
   \item \emph{front-end} : JSP / jQuery, React / Redux, Sass / Compass ;
   \item données : Postgres et SolR
 \end{itemize}}
@@ -98,7 +98,7 @@ Technologies utilisées :
 {Développements et encadrement des développeurs dans le cadre de la refonte du site de diffusion des données d'entreprises.
 \newline Technologies utilisées :
 \begin{itemize}%
-  \item \emph{back-end} : Java avec Struts2, serveur Tomcat ;
+  \item \emph{back-end} : Java avec Struts2 et Hibernate, serveur Tomcat ;
   \item \emph{front-end} : JSP / jQuery / Bootstrap ;
   \item données : Postgres
   \item paiement en ligne : Paybox
