Changement de l'intitulé du titre

--- a/cv.tex
+++ b/cv.tex
@@ -25,7 +25,7 @@
 
 % personal data
 \name{Romain}{Warnan}
-\title{Développeur Java full-stack senior}
+\title{Développeur confirmé Java full-stack}
 \address{11 bis rue des Missionnaires}{78000 Versailles}
 \phone[mobile]{06~80~33~58~52}
 \email{romain.warnan@gmail.com}
