--- a/cv.tex
+++ b/cv.tex
@@ -49,7 +49,27 @@
 
 \section{Expérience professionnelle}\label{sec:expérience-professionnelle}
 
-\cventry{depuis 2017}
+\cventry{depuis 2019}
+{Développeur Java full-stack}
+{Grisbee -- Finansemble}
+{}
+{}
+{{Développement, maintenance et exploitation des applications de l’entreprise :
+\begin{itemize}%
+  \item site internet www.grisbee.fr et application mobile ;
+  \item application de suivi des relations clients ;
+  \item programmes d’administration.
+\end{itemize}}
+Technologies utilisées :
+\begin{itemize}%
+  \item back-end : Groovy avec Grails et Gorm, serveur Tomcat ;
+  \item front-end : GSP / jQuery, React Native, Less ;
+  \item données : Mysql, MongoDB, Redis, Elasticsearch
+\end{itemize}}
+
+
+
+\cventry{2017--2019}
 {Responsable de domaine informatique}
 {Insee}
 {}
